@@ -256,6 +256,9 @@ Build
  4. LUCENE-894: Add custom build file for binary distributions that includes
     targets to build the demos. (Chris Hostetter, Michael Busch)
 
+ 5. LUCENE-904: The "package" targets in build.xml now also generate .md5
+    checksum files. (Chris Hostetter, Michael Busch)
+
 ======================= Release 2.1.0 2007-02-14 =======================
 
 Changes in runtime behavior
